//protobuf语法有 proto2和proto3两种，这里指定 proto3
syntax = "proto3";
// 文件选项
option java_package = "com.fang.screw.client.protocol";
option java_outer_classname = "MessageBase";
// 消息模型定义
message Message {
  string requestId = 1;
  CommandType cmd = 2;
  string content = 3;
  int32 retryCount = 4;
  string urlPath = 5;
  string channel = 6;
  enum CommandType {
    NORMAL = 0; //常规业务消息
    HEARTBEAT_REQUEST = 1; //客户端心跳消息
    HEARTBEAT_RESPONSE = 2; //服务端心跳消息
    ACK = 3;
    SAVE_MESSAGE = 4; //客户端请求保存消息
    SEND_MESSAGE = 5;//客户端请求发送消息
    RETRY_MESSAGE = 6;// 请重新发送消息
  }
}
